cmake_minimum_required(VERSION 2.8)
project( trackbot.c )
SET(COMPILE_DEFINITIONS -Werror)
#OPENCV
find_package( OpenCV REQUIRED )
find_library( DXL_LIB dxl )
link_directories( /home/tux/hackweek_10/facerec-0.4 ) 
include_directories(/opt/vc/userland/host_applications/linux/libs/bcm_host/include)
include_directories(/opt/vc/userland/interface/vcos)
include_directories(/opt/vc/userland)
include_directories(/opt/vc/userland/interface/vcos/pthreads)
include_directories(/opt/vc/userland/interface/vmcs_host/linux)
add_executable(trackbot RaspiCamControl.c RaspiCLI.c RaspiPreview.c DynamixelMove.c trackbot.cpp)
target_link_libraries(trackbot /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so /home/pi/hackweek_10/facerec-0.4/libopencv_facerec.a ${DXL_LIB} ${OpenCV_LIBS})
